# learning-python-qt6-pyside6

./: .cookiecutter.yaml  .envrc  README.md  pyproject.toml
_cookiecutter-replays/: _cookiecutter-template.json
_cookiecutter-template/: README.md  cookiecutter.json  pyproject.toml
_cookiecutter-template/{{cookiecutter.directory_name}}/: README.md  pyproject.toml
example_basic/: README.md  __main__.py  pyproject.toml
example_basic/custom_widgets/: simple_window.py
example_canvas_interactive/: README.md  __main__.py  pyproject.toml
